--- a/data/themes/system/theme.css
+++ b/data/themes/system/theme.css
@@ -11,11 +11,27 @@
   --widget-border-color-2: #141414;
   --widget-title-background-color: transparent;
   --widget-title-font-size: 12pt;
+  --widget-titlebar-background-color-1: #353535;
+  --widget-titlebar-background-color-2: #303030;
 
   /* Sub Widget */
   --subwidget-border-color-1: #1F1F1F;
   --subwidget-border-color-2: #4b4b4b;
   --subwidget-background-color: #1F1F1F;
+  --subwidget-titlebar-background-color-1: #252525;
+  --subwidget-titlebar-background-color-2: #202020;
+
+  --page-overview-background-color-1: #252525;
+  --page-overview-background-color-2: #202020;
+  --page-overview-titlebar-background-color-1: #353535;
+  --page-overview-titlebar-background-color-2: #303030;
+
+  /* Bed Mesh */
+  --bedmesh-background-color: #04728B;
+  --bedmesh-low-color: #044a8b;
+  --bedmesh-very-low-color: #4a048b;
+  --bedmesh-high-color: #8b5504;
+  --bedmesh-very-high-color: #8b1804;
 
   /* Item Lists */
   --list-background-color: #1F1F1F;
@@ -56,7 +72,6 @@ QMainWindow
 {
   background-color: var(--window-backgound-color);
   border-radius: 0px;
-  font-color: var(--default-font-color);
 }
 
 QScrollArea
@@ -70,7 +85,7 @@ QScrollArea
   background-color: #141414;
 }
 
-.DashboardWidget
+.DashboardWidget, .Widget
 {
   font-size: var(--widget-font-size);
   background-color: var(--widget-background-color);
@@ -78,13 +93,29 @@ QScrollArea
   border-top: var(--widget-border-size) solid black;
   border-right: var(--widget-border-size) solid black;
   border-bottom: var(--widget-border-size) solid black;
-  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--widget-border-color-1), stop: 1 var(--widget-border-color-2));
-  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--widget-border-color-1), stop: 1 var(--widget-border-color-2));
-  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--widget-border-color-1), stop: 1 var(--widget-border-color-2));
-  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--widget-border-color-1), stop: 1 var(--widget-border-color-2));
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--widget-border-color-2), stop: 1 var(--widget-border-color-1));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--widget-border-color-2), stop: 1 var(--widget-border-color-1));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--widget-border-color-2), stop: 1 var(--widget-border-color-1));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--widget-border-color-2), stop: 1 var(--widget-border-color-1));
 }
 
-.DashboardWidget:hover
+.DashboardWidgetTitleBar, .WidgetTitleBar
+{
+  font-size: var(--widget-font-size);
+  background-color: var(--widget-background-color);
+  border: none;
+  background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--widget-titlebar-background-color-2), stop: 1 var(--widget-titlebar-background-color-1));
+}
+
+.PageOverview .WidgetTitleBar
+{
+  font-size: var(--widget-font-size);
+  background-color: var(--widget-background-color);
+  border: none;
+  background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--page-overview-titlebar-background-color-2), stop: 1 var(--page-overview-titlebar-background-color-1));
+}
+
+.DashboardWidget:hover, .Widget:hover
 {
   font-size: var(--widget-font-size);
   background-color: var(--widget-background-color);
@@ -98,7 +129,7 @@ QScrollArea
   border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--primary-highlight), stop: 1 var(--widget-border-color-2));
 }
 
-.DashboardSubWidget
+.DashboardSubWidget, .SubWidget
 {
   background-color: var(--subwidget-background-color);
   border-left: var(--widget-border-size) solid black;
@@ -111,7 +142,21 @@ QScrollArea
   border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
 }
 
-.DashboardWidgetTitle
+.SubWidgetTitleBar
+{
+  font-size: var(--widget-font-size);
+  border: none;
+  background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-titlebar-background-color-2), stop: 1 var(--subwidget-titlebar-background-color-1));
+}
+
+.PageOverview
+{
+  font-size: var(--widget-font-size);
+  border: none;
+  background-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--page-overview-background-color-2), stop: 1 var(--page-overview-background-color-1));
+}
+
+.DashboardWidgetTitle .WidgetTitle
 {
   font-size: var(--widget-title-font-size);
   background-color: var(--widget-title-background-color);
@@ -638,6 +683,250 @@ QScrollArea
   background-color: var(--item-background-color);
 }
 
+.ButtonBarLeft
+{
+  border-right: none;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-left: 2px solid black;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+}
+
+.ButtonBarCenter
+{
+  border-right: none;
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+}
+
+.ButtonBarCenter:hover
+{
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3f3f3f, stop: 1 #353535);
+}
+
+.ButtonBarCenter:pressed
+{
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+.ButtonBarRight
+{
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+}
+
+.ButtonBarRight:pressed
+{
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+QComboBox {
+  border: 1px solid gray;
+  border-radius: 3px;
+  padding: 1px 18px 1px 3px;
+  min-width: 6em;
+
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+QComboBox:editable {
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+QComboBox:!editable, QComboBox::drop-down:editable {
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+}
+
+/* QComboBox gets the "on" state when the popup is open */
+QComboBox:!editable:on, QComboBox::drop-down:editable:on {
+
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+QComboBox:on { /* shift the text when the popup opens */
+  padding-top: 3px;
+  padding-left: 4px;
+}
+
+QComboBox::drop-down {
+
+  background-repeat: no-repeat;
+  background-position: center;
+  subcontrol-origin: padding;
+  subcontrol-position: top right;
+  width: 20px;
+
+  border-left-width: 1px;
+  border-left-color: #4b4b4b;
+  border-left-style: solid; /* just a single line */
+  border-top-right-radius: 3px; /* same radius as the QComboBox */
+  border-bottom-right-radius: 3px;
+  background-image: url(:/images/images/icons8-chevron-down-16.png);
+}
+
+QDoubleSpinBox
+{
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+}
+
+QDoubleSpinBox:hover, QDoubleSpinBox:focus
+{
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+}
+
+QDoubleSpinBox::up-button
+{
+    min-width: 14px;
+    min-height: 14px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+
+    subcontrol-position: top right; /* position at the top right corner */
+    subcontrol-origin: padding;
+
+    border-left: 2px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+    border-image: url(:/images/images/icons8-chevron-up-64.png);
+}
+
+QDoubleSpinBox::down-button
+{
+    min-width: 14px;
+    min-height: 14px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+
+    subcontrol-position: bottom  right; /* position at the top right corner */
+    subcontrol-origin: padding;
+
+    border-left: 2px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+    border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+    border-image: url(:/images/images/icons8-chevron-down-64.png);
+}
+
+QPushButton, QToolButton
+{
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #141414, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #141414, stop: 1 #4b4b4b);
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3d3d3d, stop: 1 #333333);
+}
+
+QPushButton:pressed, QToolButton:pressed, QToolButton:checked
+{
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #2f2f2f, stop: 1 #2f2f2f);
+}
+
+QPushButton:hover, QToolButton:hover
+{
+  border-left: 2px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  border-right: 2px solid black;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #006699, stop: 1 #4b4b4b);
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 #006699, stop: 1 #4b4b4b);
+  background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 #3f3f3f, stop: 1 #353535);
+}
+
 QTabWidget[class="Page"]
 {
 }
@@ -649,4 +938,82 @@ QTabWidget[class="Page"]::tab-bar
 
 QTabWidget[class="Page"]::pane
 {
+}
+
+.BedMeshItem
+{
+  background-color: var(--bedmesh-background-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+}
+
+.BedMeshItem[level_low=true]
+{
+  background-color: var(--bedmesh-low-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+}
+
+.BedMeshItem[level_very_low=true]
+{
+  background-color: var(--bedmesh-very-low-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+}
+
+.BedMeshItem[level_high=true]
+{
+  background-color: var(--bedmesh-high-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+}
+
+.BedMeshItem[level_very_high=true]
+{
+  background-color: var(--bedmesh-very-high-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+}
+
+.BedMeshItem
+{
+  background-color: var(--bedmesh-background-color);
+  border-left: var(--widget-border-size) solid black;
+  border-top: var(--widget-border-size) solid black;
+  border-right: var(--widget-border-size) solid black;
+  border-bottom: var(--widget-border-size) solid black;
+  border-right-color: qlineargradient(x1:1, y1:0, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-left-color: qlineargradient(x1:0, y1:0, x2:1, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-top-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
+  border-bottom-color: qlineargradient(x1:0, y1:1, x2:0, y2:0, stop: 0 var(--subwidget-border-color-1), stop: 1 var(--subwidget-border-color-2));
 }
