--- a/pages/printer/widgets/printerbed/adjustment/adjustmentscrewframe.ui
+++ b/pages/printer/widgets/printerbed/adjustment/adjustmentscrewframe.ui
@@ -14,6 +14,21 @@
    <string>Frame</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <item row="0" column="0" colspan="2">
     <widget class="QFrame" name="dataFrame">
      <property name="frameShape">
