--- a/pages/printer/widgets/printerbed/bedmesh/item/bedmeshitemframe.ui
+++ b/pages/printer/widgets/printerbed/bedmesh/item/bedmeshitemframe.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>75</width>
+    <height>60</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>75</width>
+    <height>60</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>75</width>
+    <height>60</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
@@ -17,7 +29,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="valueLabel">
      <property name="text">
-      <string>TextLabel</string>
+      <string/>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
