--- a/pages/printer/widgets/printerbed/printerbedwidget.ui
+++ b/pages/printer/widgets/printerbed/printerbedwidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>750</width>
+    <width>438</width>
     <height>472</height>
    </rect>
   </property>
@@ -90,7 +90,7 @@
        <widget class="QFrame" name="bedMeshFrame">
         <property name="minimumSize">
          <size>
-          <width>0</width>
+          <width>420</width>
           <height>50</height>
          </size>
         </property>
@@ -112,7 +112,23 @@
          </property>
          <item row="2" column="0">
           <widget class="QWidget" name="bedMeshContent" native="true">
-           <layout class="QGridLayout" name="gridLayout_7"/>
+           <layout class="QGridLayout" name="gridLayout_7">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <property name="spacing">
+             <number>0</number>
+            </property>
+           </layout>
           </widget>
          </item>
          <item row="0" column="0">
@@ -287,9 +303,15 @@
       </item>
       <item row="2" column="0">
        <widget class="QFrame" name="adjustmentScrewFrame">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
-          <width>450</width>
+          <width>420</width>
           <height>50</height>
          </size>
         </property>
@@ -311,7 +333,23 @@
          </property>
          <item row="2" column="0">
           <widget class="QWidget" name="adjustmentScrewContent" native="true">
-           <layout class="QGridLayout" name="gridLayout_8"/>
+           <layout class="QGridLayout" name="gridLayout_8">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <property name="spacing">
+             <number>0</number>
+            </property>
+           </layout>
           </widget>
          </item>
          <item row="0" column="0">
